# qask

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  app.py  config.py  docker-compose-mongo.yml  docker-compose.prod.yml  docker-compose.yml  docker-fresh-run.sh  docker-normal-run.sh  docker-run.sh  index.py  main.py  pyproject.toml  requirements.txt  socketclient.html  test.py  test_socketio.py
app/: __init__.py  api.py  db.py  test_socketio.py
app/api/: __init__.py  host.py  user.py
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api.py  db.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: QuestionBox.tsx  QuestionList.tsx
frontend/src/pages/: Entry.tsx  Room.tsx
justasklah/: __init__.py  api.py  db.py  models.py  session.py
